--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "console-board",
   "version": "0.0.1",
   "description": "Display all console output in real html",
-  "main": "index.js",
+  "main": "libs/index.js",
   "scripts": {
+    "build": "webpack",
+    "build:demos": "webpack --config webpack.demos.config.js",
+    "dev": "node ./devServer",
+    "prerelease": "rm -fr lib && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,5 +27,24 @@
   "bugs": {
     "url": "https://github.com/xiaobuu/console-board/issues"
   },
-  "homepage": "https://github.com/xiaobuu/console-board#readme"
+  "homepage": "https://github.com/xiaobuu/console-board#readme",
+  "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-eslint": "^4.1.8",
+    "babel-loader": "^6.2.2",
+    "babel-plugin-syntax-object-rest-spread": "^6.5.0",
+    "babel-plugin-transform-object-rest-spread": "^6.5.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.5.0",
+    "eslint": "^1.10.3",
+    "eslint-config-airbnb": "^5.0.0",
+    "eslint-loader": "^1.2.1",
+    "eslint-plugin-react": "^3.16.1",
+    "history": "^2.0.0",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
+    "react-router": "^2.0.0-rc6",
+    "webpack": "^1.12.13"
+  }
 }
