Use react-inspector

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "console-board",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Display all console output in real html",
   "main": "libs/index.js",
   "scripts": {
@@ -49,6 +49,8 @@
     "webpack-dev-server": "^1.15.0"
   },
   "dependencies": {
-    "moment": "^2.14.1"
+    "moment": "^2.14.1",
+    "react-inspector": "git+https://github.com/xiaobuu/react-inspector.git",
+    "react-json-tree": "^0.10.0"
   }
 }
